# Chat_Assistant

./: .gitignore  README.md  pyproject.toml  validate_templates.py
docs/: TEMPLATE_SYSTEM.md
docs/templates/: README.md  business_decision.md  market_analysis.md  project_planning.md
src/: __init__.py  app.py  chat_handler.py  template_loader.py  templates.py  utils.py
tests/: test_chat.py
